--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="preload" as="image" href="/img/banner-bg.webp">
+  <link rel="preload" as="image" href="/img/banner-vr-m.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/bio-verse-bg-m.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/chem-verse-bg-m.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/atom-verse-bg-m.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/space-verse-bg-m.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/geo-verse-bg-m.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/bio-verse-bg.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/chem-verse-bg.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/atom-verse-bg.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/space-verse-bg.webp">
+  <link rel="preload" as="image" href="/img/product/page-bg/geo-verse-bg.webp">
+
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
