--- a/index.html
+++ b/index.html
@@ -1,36 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SchoolVR</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="preload" as="image" href="/img/banner-bg.webp" />
+    <link rel="preload" as="image" href="/img/banner-vr-m.webp" />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/bio-verse-bg-m.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/chem-verse-bg-m.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/atom-verse-bg-m.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/space-verse-bg-m.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/geo-verse-bg-m.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/bio-verse-bg.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/chem-verse-bg.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/atom-verse-bg.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/space-verse-bg.webp"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/img/product/page-bg/geo-verse-bg.webp"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SchoolVR</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="preload" as="image" href="/img/banner-bg.webp">
-  <link rel="preload" as="image" href="/img/banner-vr-m.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/bio-verse-bg-m.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/chem-verse-bg-m.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/atom-verse-bg-m.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/space-verse-bg-m.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/geo-verse-bg-m.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/bio-verse-bg.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/chem-verse-bg.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/atom-verse-bg.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/space-verse-bg.webp">
-  <link rel="preload" as="image" href="/img/product/page-bg/geo-verse-bg.webp">
-
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
