fixed issues on website

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="image" href="/img/banner-bg.webp" />
     <link rel="preload" as="image" href="/img/banner-vr-m.webp" />
+    <link rel="preload" as="image" href="/img/banner-vr.webp" />
     <link
       rel="preload"
       as="image"
