--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon/favicon-32x32.png" />
@@ -8,26 +9,22 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/favicon/apple-touch-icon.png"
-    />
+      href="/favicon/apple-touch-icon.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/favicon/favicon-32x32.png"
-    />
+      href="/favicon/favicon-32x32.png" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/favicon/favicon-16x16.png"
-    />
+      href="/favicon/favicon-16x16.png" />
     <link rel="manifest" href="/favicon/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/favicon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
+      color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="image" href="/img/banner-bg.webp" />
@@ -36,57 +33,48 @@
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/bio-verse-bg-m.webp"
-    />
+      href="/img/product/page-bg/bio-verse-bg-m.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/chem-verse-bg-m.webp"
-    />
+      href="/img/product/page-bg/chem-verse-bg-m.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/atom-verse-bg-m.webp"
-    />
+      href="/img/product/page-bg/atom-verse-bg-m.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/space-verse-bg-m.webp"
-    />
+      href="/img/product/page-bg/space-verse-bg-m.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/geo-verse-bg-m.webp"
-    />
+      href="/img/product/page-bg/geo-verse-bg-m.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/bio-verse-bg.webp"
-    />
+      href="/img/product/page-bg/bio-verse-bg.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/chem-verse-bg.webp"
-    />
+      href="/img/product/page-bg/chem-verse-bg.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/atom-verse-bg.webp"
-    />
+      href="/img/product/page-bg/atom-verse-bg.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/space-verse-bg.webp"
-    />
+      href="/img/product/page-bg/space-verse-bg.webp" />
     <link
       rel="preload"
       as="image"
-      href="/img/product/page-bg/geo-verse-bg.webp"
-    />
+      href="/img/product/page-bg/geo-verse-bg.webp" />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
 </html>
